almost the last cvs commit for 1.0

--- a/doc/reference.tex
+++ b/doc/reference.tex
@@ -336,6 +336,6 @@ specifies a mouse click input \\
 
 {\tt hotspot('over'|'out'|'click', x1, y1, x2, y2, proc) }
 
-constructs a group of elements \\
+constructs hotspot for a region that activates a python procedure 'proc' \\
 
 
