*** empty log message ***

--- a/doc/summon_manual.tex
+++ b/doc/summon_manual.tex
@@ -81,7 +81,7 @@ designing a graphical user interface or recompiling native code.  By simplifying
 the task of designing a visualization, users can spend more time on
 understanding their data. 
 
-SUMMON was deisgned with several philosophies.  First, recompilation should
+SUMMON was designed with several philosophies.  First, recompilation should
 be avoided in order to speed up the development process.  Second, design of
 graphical user interfaces should also be avoided.  Designing a good interface
 takes planning and time to layout buttons, scrollbars, and dialog boxes.  Yet a 
