--- a/doc/summon_manual.tex
+++ b/doc/summon_manual.tex
@@ -77,7 +77,7 @@ rasmus@mit.edu
 \subsection{What is SUMMON}
 
 SUMMON is a python extension module that provides rapid prototyping of 2D
-visualizations.  By heavily relying on the python scripting language, SUMMOn
+visualizations.  By heavily relying on the python scripting language, SUMMON
 allows the user to rapidly prototype a custom visualization for their data, 
 without the overhead of a designing a graphical user interface or recompiling 
 native code.  By simplifying the task of designing a visualization, users can 
