*** empty log message ***

--- a/doc/summon_manual.tex
+++ b/doc/summon_manual.tex
@@ -207,7 +207,7 @@ following controls are available:
 \vspace{.1in}
 \begin{tabular}{ll}
     left mouse button          & scroll \\
-    right mouse button         & zoom \\
+    right mouse button         & zoom (down: zoom-out, up: zoom-in)\\
     Ctrl + right mouse button  & zoom x-axis \\
     Shift + right mouse button & zoom y-axis \\
     arrow keys                 & scroll \\
@@ -215,10 +215,11 @@ following controls are available:
     Z                          & zoom in \\
     z                          & zoom out \\
     h                          & home (make all graphics visible) \\
-    l                          & toggle anti-aliasing \\
+    Ctrl + l                   & toggle anti-aliasing \\
     p                          & output SVG of the current view \\
     Ctrl + p                   & output PNG of the current view \\
-    q                          & quit \\
+    Ctrl + x                   & show/hide crosshair \\
+    q                          & close window \\
 \end{tabular}
 \vspace{.2in}
 
