--- a/doc/summon_manual.tex
+++ b/doc/summon_manual.tex
@@ -6,9 +6,9 @@
 \textwidth=6.5in
 \oddsidemargin=-0.0in
 \evensidemargin=-0.0in
-\topmargin=-0.2in
+\topmargin=-0.5in
 \footskip=0.8in
-\textheight=8.00in
+\textheight=8.50in
 
 
 % list shortcuts
@@ -28,7 +28,7 @@
 
 
 
-\newcommand{\version}{1.6}
+\newcommand{\version}{1.7}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -85,12 +85,12 @@ spend more time on understanding their data.
 
 SUMMON was designed with several philosophies.  First, recompilation should
 be avoided in order to speed up the development process.  Second, design of
-graphical user interfaces should also be avoided.  Designing a good interface
+graphical user interfaces should also be minimized.  Designing a good interface
 takes planning and time to layout buttons, scrollbars, and dialog boxes.  Yet a 
 poor interface is very painful to work with. Even when one has a good interface,
-rarely can it be automated for batch mode.  Instead, SUMMON relies on the
-python terminal for most interaction.  This allows the users direct access to 
-the underlining code, which is more expressive, and can be automated through
+rarely can it be automated for batch mode.  Instead, SUMMON relies on the python
+terminal for most interaction.  This allows the users direct access to  the
+underlining code, which is more expressive, and can be automated through
 scripting.  
 
 Lastly, SUMMON is designed to be fast.  Libraries already exist for
@@ -112,11 +112,17 @@ SUMMON.
 \items{
     \item Python module extension
     \item Fast OpenGL graphics
-    \item Drawing arbitrary points, lines, polygons
+    \item Drawing arbitrary points, lines, polygons, text with python scripting
     \item Binding inputs (keyboard, mouse, hotspots) to any python function 
-    \item SVG output (also PNG with ImageMagick)
+    \item Separate threads for python and graphics (allows use of python prompt
+          and responsive graphic at the same time)    
+    \item Transparently handles graphics event loop, scrolling, zooming, text
+          layout (auto-clipping, scaling, alignment), detecting clicks, allowing
+          you to focus on viewing your data
+    \item SVG output (also GIF/PNG/JPG/etc with ImageMagick)
     \item cross-platform (windows, linux)
 }
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Installing SUMMON}
@@ -126,7 +132,7 @@ The latest version of SUMMON can be obtained from
 http://people.csail.mit.edu/rasmus/summon/.  Download the *.tar.gz archive and
 unzip it with the command:
 
-\codeblock{tar zxvf summon-1.6.tar.gz}
+\codeblock{tar zxvf summon-\version.tar.gz}
 
 Before running or compiling SUMMON, the following libraries are required:
 \items {
@@ -139,20 +145,20 @@ Before running or compiling SUMMON, the following libraries are required:
 \subsection{Compiling SUMMON}
 
 SUMMON can be installed using the standard distutils 
-(http://docs.python.org/inst/inst.html).  For example, in the \code{summon-1.6}
-directory run:
+(http://docs.python.org/inst/inst.html).  For example, in the
+\code{summon-\version} directory run:
 
 \codeblock{python setup.py install}
 
 To install SUMMON in another location other than in \code{/usr} use:
 
-\codeblock{python setup.py install --home=<another directory prefix>}
+\codeblock{python setup.py install --prefix=<another directory prefix>}
 
 
 \subsection{Configuring SUMMON}
 
 SUMMON expects to find a configuration file called  \code{summon\_config.py}
-somewhere in the python path.  Distutils installs a default module installed in
+somewhere in the python path.  Distutils installs a default module located in
 your python path.  To customize SUMMON with your own key bindings and behavior,
 you can write your own \code{summon\_config.py} file.  Just be sure it appears
 in your python path somewhere {\em before} SUMMON default configuration file. 
@@ -167,7 +173,7 @@ initialize the default keyboard and mouse  bindings.
 \section{Using SUMMON}
 \label{sec:using}
 
-SUMMON can be used a stand-alone program and as a module in a larger python
+SUMMON can be used as stand-alone program and as a module in a larger python
 program.  The stand-alone version is installed in \code{PREFIX/bin/summon} and
 is called from the command line as follows:
 
@@ -175,20 +181,19 @@ is called from the command line as follows:
 
 On execution, SUMMON opens an OpenGL window and evaluates any script that it is
 given in the python engine. After evaluation, the SUMMON prompt should appear
-which provides direct access to the python engine.  Users should be familar with
-the python language in order to use SUMMON.
+which provides direct access to the python engine.  Users should be familiar
+with the python language in order to use SUMMON.
 
 The SUMMON prompt acts exactly like the python prompt except for the OpenGL
-window and the appearence of a builtin module called \code{summon}.  All of the
-commands needed to interact with the visualization are within the \code{summon} 
-module.  
+window and the appearance of several automatically imported modules such as 
+\code{summon}.  All of the commands needed to interact with the visualization
+are within the \code{summon}  module.  
 
 To learn how to use SUMMON, example scripts have been provided in the 
-\code{summon/examples/} directory.  Examples of full fledged
-visualizations, SUMMATRIX and SUMTREE, are also given in the \code{summon/bin/}
-directory.  Their example input files are given in
-\code{summon/examples/summatrix/} and \code{summon/examples/sumtree/},
-respectively.
+\code{summon/examples/} directory.  Examples of full fledged visualizations,
+SUMMATRIX and SUMTREE, are also given in the \code{summon/bin/} directory. 
+Their example input files are given in \code{summon/examples/summatrix/} and
+\code{summon/examples/sumtree/}, respectively.
 
 
 
@@ -196,10 +201,10 @@ respectively.
 
 For an introduction to the basic commands of SUMMON, let us walk through the
 code of the first example.  To begin, change into the
-\code{summon/examples/} directory and open up \code{example1.py} in a
-text editor.  Also use SUMMON to execute the example with following command.
+\code{summon/examples/} directory and open up \code{01\_basics.py} in a
+text editor.  Also use execute the example with following command.
 
-\codeblock{\$ summon example1.py}
+\codeblock{\$ python 01\_basics.py}
 
 The visualization should immediately appear in your OpenGL window.  The
 following controls are available:
@@ -216,8 +221,8 @@ following controls are available:
     z                          & zoom out \\
     h                          & home (make all graphics visible) \\
     Ctrl + l                   & toggle anti-aliasing \\
-    p                          & output SVG of the current view \\
-    Ctrl + p                   & output PNG of the current view \\
+    Crrl + p                   & output SVG of the current view \\
+    Ctrl + Shift + p           & output PNG of the current view \\
     Ctrl + x                   & show/hide crosshair \\
     q                          & close window \\
 \end{tabular}
@@ -225,18 +230,19 @@ following controls are available:
 
 
 
-In your text editor, the example \code{example1.py} should contain the 
+In your text editor, the example \code{01\_basics.py} should contain the 
 following python code:
 
 \begin{minipage}{6in}
 { \footnotesize
 \begin{verbatim}
-#!/usr/bin/env summon
+#!/usr/bin/python -i
 # SUMMON examples
-# example1.py - basic commands
+# 01_basics.py - basic commands
 
 # make summon commands available
 from summon.core import *
+import summon
 
 # syntax of used summon functions
 # add_group( <group> )   : adds a group of graphics to the screen
@@ -246,17 +252,17 @@ from summon.core import *
 # color( <red>, <green>, <blue>, [alpha] ) : a primitive that specifies a color
 
 
-# clear the screen of all drawing
-clear_groups()
+# create a new window
+win = summon.Window("01_basics")
 
 # add a line from (0,0) to (30,40)
-add_group(group(lines(0,0, 30,40)))
+win.add_group(group(lines(0,0, 30,40)))
 
 # add a quadrilateral
-add_group(group(quads(50,0, 50,70, 60,70, 60,0)))
+win.add_group(group(quads(50,0, 50,70, 60,70, 60,0)))
 
 # add a multi-colored quad
-add_group(group(quads(
+win.add_group(group(quads(
     color(1,0,0), 100, 0,
     color(0,1,0), 100, 70,
     color(0,0,1), 140, 60,
@@ -264,36 +270,37 @@ add_group(group(quads(
 
 
 # add some text below everything else
-add_group(group(
+win.add_group(group(
     text("Hello, world!",    # text to appear
          0, -10, 140, -100,    # bounding box of text
          "center", "top")))    # justification of text in bounding box
 
 # center the "camera" so that all shapes are in view
-home()
+win.home()
+
 \end{verbatim}
 }
 \end{minipage}
 \vspace{.25in}
 
 
-As you can see, the first line of the script imports all of the SUMMON functions
-from the \code{summon} module into the current environment.  The first of such
-functions is the \code{clear\_groups()} command.  All graphics are added and
-removed from the screen in sets called {\em groups}.  Groups provide a way to
-organize and reference graphical elements.  The \code{clear\_groups()} function
-removes all groups that may be on the screen.
+The first line of the script imports the SUMMON module \code{summon} and all of 
+the basic SUMMON functions (\code{group}, \code{lines}, \code{color}, etc) from
+the \code{summon.core} module into the current environment.  
+A new SUMMON graphics window is created using the \code{summon.Window} object.
 
-The next line of python code in the example adds a single line to the screen. 
+All graphics are added and removed from the window in sets called {\em groups}. 
+Groups provide a way to organize and reference graphical elements.
+The first graphical group added to the window is a line.
 The line is created with the \code{lines} function, which takes a series of
 numbers specifying the end-point coordinates for the line.  The first
 two numbers specify the x and y coordinates of one end-point (0,0) and the last
 two specify the other end-point (30,40).  Next, the line is placed in a group
 using the \code{group} function which returns a group ready to be added to the
 screen.   Lastly, the \code{add\_group} function is called on the group.  This
-function finally places the line on the screen.  Although this may seem like a
+function finally places the line on the window.  Although this may seem like a
 lot to type to draw a single line, in most uses several lines and other graphics 
-are placed a group before adding them to the screen.
+are placed a group before adding them to the window.
 
 The next line in the example adds a quadrilateral to the screen with the
 \code{quads} command.  The arguments to the \code{quads} function are similar to
@@ -308,17 +315,17 @@ within graphical elements such as \code{lines} and \code{quads} or directly
 inside a group.  Since each vertex in this example quad has a different color,
 OpenGL will draw a quadrilateral that blends these colors.
 
-Lastly, an example of text is shown.  Once again the text is added to the screen
+Lastly, an example of text is shown.  Once again the text is added to the window
 using the \code{add\_group} function.  The arguments to the text function
 specify the text to be displayed, a bounding box specified by two
-opposite  vertices, and then zero or more justifications ("center", "top",
-etc.) that will affect how the text aligns in its bounding box.  There are
-currently three types of text: \code{text} (bitmap), \code{text\_scale} (stroke),
-\code{text\_clip} (stroked text that clips).  The bitmap text will clip if it
-cannot fit within its bounding box.  This is very useful in cases where the user
-zooms out very far and no more space is available for the text to fit.  See the
-example \code{text.py} for a better illustration of the different text
-constructs.
+opposite  vertices, and then zero or more justifications ("left", "right",
+"center", "top", "bottom", "middle") that will affect how the text aligns in its
+bounding box.  There are currently three types of text: \code{text} (bitmap),
+\code{text\_scale} (stroke), \code{text\_clip} (stroked text that clips).  The
+bitmap text will clip if it cannot fit within its bounding box.  This is very
+useful in cases where the user zooms out very far and no more space is available
+for the text to fit.  See the example \code{10\_text.py} for a better
+illustration of the different text constructs.
 
 The final function in the script is \code{home()}.  \code{home()} causes the
 SUMMON window to scroll and zoom such that all graphics are visible.  This is a
@@ -334,18 +341,17 @@ SUMMON's more powerful features.
 In the \code{summon/bin/} directory are two programs, \code{summatrix} and
 \code{sumtree} that use summon to visualize large datasets.  There programs are
 written in python and so can be easily extended.  In my own work, I have 
-extended the tree visualization program to integrate more closely with biological
-data (executing CLUSTALW and MUSCLE on subtrees, displaying GO terms, etc.).  The
-purpose of writing visualization programs in this way, is to allow others to
-easily overlay and integrate their own data.  
+extended the tree visualization program to integrate more closely with
+biological data (executing CLUSTALW and MUSCLE on subtrees, displaying GO terms,
+etc.).  The purpose of writing visualization programs in this way, is to allow
+others to easily overlay and integrate their own data.  
 
-Also in both visualizations the underling data is accessable through global python
-variables.  That means if you have a very specific question like, "How many
-genes in my subtree have a particular GO term?", you can quickly write a few
-lines of python to walk the tree and answer the question youself.  It would be
-very difficult to anticipate all such questions during the development of a
-visualization.  And yet when visualizing, it can become frustrating if you cannot
-fully interact with the  data.
+Also in both visualizations the underling data is accessible through global
+python variables.  That means if you have a very specific question like, "How
+many genes in my subtree have a particular GO term?", you can quickly write a
+few lines of python to walk the tree and answer the question yourself.  It would
+be very difficult to anticipate all such questions during the development of a
+non-scriptable visualization.
 
 Example input files for both programs can be found under the 
 \code{summon/examples} directory.  Both programs will print their usage if run
@@ -358,13 +364,8 @@ with no arguments.  Here are some recommended examples:
 \codeblock{\$ summatrix -i human\_mouse.imat}
 
 
-\clearpage
 \section{SUMMON Function Reference}
 
-All help information is also available from the SUMMON prompt.  Use 
-\code{help(command)} to get required arguments and a usage description.
-
-\input{reference.tex}
-
+See \code{summon.html} for complete function reference.
 
 \end{document}
