--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,13 @@
-Change Log
-----------
+SUMMON Change Log
+-----------------
+
+
+2007/5/6
+- fully implemented object-oriented API
+- added extra functions for manipulating windows (names, position, size)
+- fixed sumtree demo
+- improve summatrix demo
+- made source code fully compatible with Visual Studio 2005
 
 
 2007/4/6
