--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,14 @@
 SUMMON Change Log
 -----------------
 
+2007/5/31
+- added small edits to make OSX compilation go more smoothly
+- trying out changed to git for SCM
+- code cleanup
+- try to work towards python objects
 
-2007/5/6
+
+2007/5/6 - summon-1.7
 - fully implemented object-oriented API
 - added extra functions for manipulating windows (names, position, size)
 - fixed sumtree demo
