--- a/CHANGES
+++ b/CHANGES
@@ -5,7 +5,7 @@ SUMMON Change Log
 - added small edits to make OSX compilation go more smoothly
 - trying out changed to git for SCM
 - code cleanup
-- try to work towards python objects
+- try to work towards python objects.
 
 
 2007/5/6 - summon-1.7
