--- a/doc/summon_manual.tex
+++ b/doc/summon_manual.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{article}
 \usepackage{amsmath}
 \usepackage{graphicx}
+\usepackage{pslatex}  % nice fonts
 
 % page dimensions
 \textwidth=6.5in
