--- a/doc/summon_manual.tex
+++ b/doc/summon_manual.tex
@@ -77,9 +77,12 @@ rasmus@mit.edu
 
 \subsection{What is SUMMON}
 
-SUMMON is a python extension module that provides rapid prototyping of 2D visualizations.  BY heavily relying on the python scripting language, SUMMON allows the user to rapidly
-prototype a custom visualization for their data,  without the overhead of a designing a graphical user interface or recompiling  native code.  By simplifying the task of designing
-a visualization, users can  spend more time on understanding their data. 
+SUMMON is a python extension module that provides rapid prototyping of 2D
+visualizations.  By heavily relying on the python scripting language, SUMMON
+allows the user to rapidly prototype a custom visualization for their data, 
+without the overhead of a designing a graphical user interface or recompiling 
+native code.  By simplifying the task of designing a visualization, users can 
+spend more time on understanding their data. 
 
 SUMMON was designed with several philosophies.  First, recompilation should
 be avoided in order to speed up the development process.  Second, design of
