updated install files

--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,11 @@
 SUMMON Change Log
 -----------------
 
+2007/8/17
+- created foundation for a more pythonic model interface (merged cobject)
 
-2007/7/6
+
+2007/7/11 - summon-1.7.2
 More stability and more complete demos
 - added features and fixed bugs for summatrix
 - added features and fixed bugs for sumtree
@@ -11,7 +14,7 @@ More stability and more complete demos
 - fixed race condition for multiwindow stacking
 - fixed race condition for C++ timer and python shutdown
 - Makefile cleanup
-- working towards summon-1.7.2
+- fixes for cygwin compiling
 
 
 2007/5/31
@@ -43,14 +46,12 @@ More stability and more complete demos
 
 
 2006/8/30 - summon-1.1
-
 - fixed bugs 
 - added text_clip
 
 
 2005/8/26 - summon-1.0
-
-main features
+- main features
     - embedded python engine
     - fast OpenGL graphics    
     - drawing arbitrary points, lines, polygons
